imvirt (0.9.6) unstable; urgency=low

  * Do not die if /proc/cpuinfo is unavailable
    (Debian Bug #693278 by Dmitry Smirnov <onlyjob@member.fsf.org>).
  * Split ImVirt Portable into core and bundle (w/ PAR stuff) build.

 -- Thomas Liske <liske@ibh.de>  

imvirt (0.9.5) unstable; urgency=low

  * Add imvirt-report manpage from Debian,
     thanks to Patrick Matthäi <pmatthaei@debian.org>.
  * Move source from SourceForge SVN to github,
    cleanup svn:keywords usage.
  * Update perl/Makefile.PL (require File::Which).
  * KVM: Don't count dmesg line twice
    (reported by Torsten Lüttgert <t.luettgert@enda.eu>).
  * LXC: Remove inapplicable /proc from procfs_read() parameter
    (reported by Torsten Lüttgert <t.luettgert@enda.eu>).
  * LXC: Use starttime jiffies from /proc/1/stat to detect LXC
    (suggested by Torsten Lüttgert <t.luettgert@enda.eu>).
  * LXC: Fix false positive (regex typo).
  * Provide ImVirt Portable download.
  * Revised Microsoft Virtual PC / Hyper-V detection.

 -- Thomas Liske <liske@ibh.de>  Fri, 14 Sep 2012 23:30:36 +0200

imvirt (0.9.4) unstable; urgency=low

  * Fix some FTBFS due gcc 4.7
    (reported by Patrick Matthäi <pmatthaei@debian.org>).
  * Fix pod2man error (ImVirt.pm)
    (reported by Patrick Matthäi <pmatthaei@debian.org>).
  * Fix wrong use statement in LXC.pm
    (reported by Miroslav Suchý <msuchy@redhat.com>).
  * Fix /proc/modules interpretation
    (reported by Miroslav Suchý <msuchy@redhat.com>).
  * Use mktemp instead of tempfile (debianutils) in imvirt-report
    (reported by Miroslav Suchý <msuchy@redhat.com>).

 -- Thomas Liske <liske@ibh.de>  Thu, 17 May 2012 20:32:04 +0200

imvirt (0.9.3) unstable; urgency=low

  * Add ARAnyM detection support.
  * Add LXC detection support.
  * Reduce perl warnings.
  * Use File::Which if available (no shell used to execute binaries).
  * Take only used virtio kernel modules into account.
  * Improve imvirt.spec.in (thanks to Miroslav Suchý <msuchy@redhat.com>).