@@ -3,6 +3,7 @@ imvirt (0.9.6) unstable; urgency=low
   * Do not die if /proc/cpuinfo is unavailable
     (Debian Bug #693278 by Dmitry Smirnov <onlyjob@member.fsf.org>).
   * Split ImVirt Portable into core and bundle (w/ PAR stuff) build.
+  * Add Parallels detection support.
 
  -- Thomas Liske <liske@ibh.de>  
 
